[수정] plan2 페이지 (다음 버튼)

--- a/src/main/resources/templates/plan/plan2.html
+++ b/src/main/resources/templates/plan/plan2.html
@@ -82,16 +82,33 @@
     // 담은 아이템 지우는 함수
     function deleteRow(ths) {
         var ths = $(ths);
-        var text = ths.closest('a').find('strong.mb-1').text();
+        var text = ths.closest('a').find('strong.mb-1').text(); // 선택한 관광지 이름 가져오기
         console.log(text);
         for (var i = 0; i<viaMarkers[index].length; i++) {
             console.log(viaMarkers[index][i]._marker_data.options.title);
-            if(text == viaMarkers[index][i]._marker_data.options.title) {
+            if(text == viaMarkers[index][i]._marker_data.options.title) { // 선택한 관광지 이름이 viaMarkers[index]의 관광지 이름과 같다면
                 ths.closest("a").remove(); // 화면에서 출력되는 목록을 지우기
                 viaMarkers[index][i].setMap(null); // 지도에 뜨는 마커를 지우기
                 viaMarkers[index].splice(i,1); // 마커 배열에서 삭제하기
                 places[index].splice(i,1); // 선택한 관광지 배열에서 삭제하기
+
             }
+        }
+        console.log("places[index] : " + places[index]);
+        viaMarkers[index].forEach(function (marker) {
+            marker.setMap(null); // TMap에서 마커 제거
+        });
+        viaMarkers[index] = []; // viaMarkers 배열 초기화
+
+        for(var i = 0; i<places[index].length; i++) {
+            addMarker(i+1, places[index][i]) // 마커 다시 찍기
+        }
+
+        if(resultInfoArr[index].length > 0){ // 관광지 추가할때는 빨간 선을 지우지 않지만, 삭제할때는 빨간 선을 지우는게 좋을 것 같아서 추가했습니다.
+            for(var i in resultInfoArr[index]){
+                resultInfoArr[index][i].setMap(null); //경로 빨간 선도 찍어놨다면 삭제
+            }
+            resultInfoArr[index]=[];
         }
     }
 
@@ -131,7 +148,7 @@
     // 마커 삭제하기 함수
     function deleteMarkers() {
         for (var i=0; i<viaMarkers[index].length; i++) {
-            viaMarkers[index].setMap(null);
+            viaMarkers[index][i].setMap(null);
         }
         // 등록된 마커 배열도 초기화
         viaMarkers[index] = [];
@@ -141,17 +158,6 @@
         // 출력된 목록도 초기화
         $('#areabox').empty();
     }
-
-    // 전체 관광지 삭제하기 버튼을 누르면 모든 마커를 삭제
-    $(".btn_delete").click(function () {
-        deleteMarkers();
-        if(resultInfoArr[index].length > 0){
-            for(var i in resultInfoArr[index]){
-                resultInfoArr[index][i].setMap(null);
-            }
-            resultInfoArr[index]=[];
-        }
-    })
 
     // 마커 추가하기 함수
     function addMarker(status, info) {
@@ -243,11 +249,8 @@
                         `;
             $('#areabox').append(template); // 계속해서 추가한다.
         });
-    };
+    }
 
-    // 다음 버튼 클릭시 실행
-    $("#next-btn").click(function () {
-    })
 
     // tmap 실행 함수
     function initTmap2() {
@@ -270,13 +273,15 @@
                     var headers = {};
                     headers["appKey"] = appKey;
 
+                    viaPoints[index] = []; // 이전 viaPoints[index] 배열을 날리고
+
                     // 시작 장소와 종료 장소
                     var start_Mapx = viaMarkers[index][0]._marker_data.options.position._lng;
                     var start_Mapy = viaMarkers[index][0]._marker_data.options.position._lat;
                     var end_Mapx = viaMarkers[index][viaMarkers[index].length-1]._marker_data.options.position._lng;
                     var end_Mapy = viaMarkers[index][viaMarkers[index].length-1]._marker_data.options.position._lat;
 
-                    // 마커에 찍힌 경유지
+                    // 마커에 찍힌 경유지를 새로 받는다
                     for(var i = 1; i<viaMarkers[index].length-1; i++) {
                         // 하나하나 선택한 경유지
                         var viaPoint = {};
@@ -286,9 +291,7 @@
                         viaPoint.viaY = viaMarkers[index][i]._marker_data.options.position._lat.toString();
                         console.log("viaPoint : " + viaPoint);
 
-                        viaPoints[index].push(viaPoint);
-
-
+                        viaPoints[index].push(viaPoint); // 지금 담겨진 경로를 viaPoints[index] 에 담는다.
                     }
                     console.log(viaPoints[index]);
 
@@ -320,7 +323,8 @@
                             var tTime = "총 시간 : " + (resultData.totalTime/60).toFixed(0) + "분,  ";
                             var tFare = "총 요금 : " + resultData.totalFare + "원";
 
-                            $(".result").text(tDistance+tTime+tFare);
+                            resultText[index] = tDistance+tTime+tFare;
+                            $(".result").text(resultText[index]);
 
                             // 기존 라인 초기화
                             if(resultInfoArr[index].length > 0){
@@ -386,6 +390,8 @@
                     var headers = {};
                     headers["appKey"] = appKey;
 
+                    viaPoints[index] = []; // 이전 viaPoints[index] 배열을 날리고
+
                     // 시작 장소와 종료 장소
                     var start_Mapx = viaMarkers[index][0]._marker_data.options.position._lng;
                     var start_Mapy = viaMarkers[index][0]._marker_data.options.position._lat;
@@ -401,7 +407,7 @@
                         viaPoint.viaY = viaMarkers[index][i]._marker_data.options.position._lat.toString();
                         console.log(viaPoint);
 
-                        viaPoints[index].push(viaPoint);
+                        viaPoints[index].push(viaPoint); // 지금 담겨진 경로를 viaPoints[index] 에 담는다.
                     }
                     console.log(viaPoints[index]);
 
@@ -481,18 +487,36 @@
                     });
                 }
             })
+
+
+        // 전체 관광지 삭제하기 버튼을 누르면 모든 마커를 삭제
+        $(".btn_delete").click(function () {
+            deleteMarkers();
+            if(resultInfoArr[index].length > 0){
+                for(var i in resultInfoArr[index]){
+                    resultInfoArr[index][i].setMap(null);
+                }
+                resultInfoArr[index]=[];
+            }
+        })
     }
-
-
-
 
     document.addEventListener("DOMContentLoaded", function () {
         // 각 탭 요소들을 선택
         var tabs = document.querySelectorAll('.nav-link');
+        // 첫 번째 탭을 활성화하고 해당 내용을 보이도록 설정
+        tabs[0].classList.add('active');
+        $('#your_day').html("DAY1");
+        index = 0;
 
         // 각 탭에 대해 클릭 이벤트 리스너 추가
-        tabs.forEach(function (tab) {
+        tabs.forEach(function (tab, tabIndex) {
             tab.addEventListener('click', function () {
+                // 현재 탭이 비어있는지 확인
+                if (places[index].length === 0) { // 수정: 현재 탭의 장소 배열이 비어있으면
+                    alert('장소를 추가해주세요.');
+                    return; // 수정: 장소를 추가하지 않았으므로 다음으로 이동하지 않음
+                }
 
                 // 모든 탭에서 'active' 클래스 제거
                 tabs.forEach(function(otherTab) {
@@ -508,7 +532,6 @@
                 var yourDay = "DAY" + (index + 1).toString(); // 담은 장소가 몇일째인지 띄워줌
                 $('#your_day').html(yourDay);
 
-
                 // 다른 탭으로 이동할 경우
                 if(previousTabIndex !== -1 && previousTabIndex !== index) {
                     viaMarkers[previousTabIndex].forEach(function(marker) {
@@ -519,12 +542,7 @@
                     })
                     $(".result").text(""); // 총 거리, 시간, 요금 결과 제거
                 }
-                // if(resultInfoArr[previousTabIndex].length > 0){
-                //     for(var i in resultInfoArr[previousTabIndex]){
-                //         resultInfoArr[previousTabIndex][i].setMap(null); // TMap에서 이전 탭 경로 표시 제거
-                //     }
-                //     resultInfoArr[previousTabIndex]=[];
-                // }
+
                 // 현재탭의 목록 불러오기
                 addPrintDayList();
                 // 선택한 인덱스 탭에 맞는 마커를 다시 로드
@@ -538,14 +556,33 @@
                 // 선택한 인덱스 탭에 맞는 총 거리, 시간, 요금 결과를 다시 로드
                 $(".result").text(resultText[index]); // 총 거리, 시간, 요금 결과 제거
 
-                // resultInfoArr[index].push(polyline_[index]);
-                // resultInfoArr[index].forEach(function(resultLine) {
-                //     resultLine.setMap(map);
-                // });
-
                 // 모든 마커 로드를 완료한 후 이전 인덱스를 현재 인덱스로 바꾸기
                 previousTabIndex = index;
             });
+        });
+
+        // 다음 버튼 클릭시 실행
+        $("#next-btn").click(function () {
+            // 마지막 탭에서 장소를 추가한 경우에만 데이터 저장
+            if (index === tabs.length - 1) {
+                var allPlacesAdded = places.every(function(placeList) {
+                    return placeList.length > 0;
+                });
+                if (allPlacesAdded) {
+                    alert('데이터 저장해야됨');
+                } else {
+                    alert('모든 탭에서 장소를 추가해주세요.');
+                }
+            }
+
+            // 현재 탭에서 장소를 추가한 경우에만 다음 탭으로 이동
+            if (places[index].length > 0 && viaMarkers[index].length > 0) {
+                // 다음 탭으로 이동
+                var nextTab = tabs[index + 1];
+                nextTab.click(); // 다음 탭으로 이동하는 클릭 이벤트 발생시킴
+            } else {
+                alert('장소를 추가해주세요.');
+            }
         });
     });
 
