컨테이너 마진 추가(사이드바 넓이만큼)

--- a/src/main/resources/static/assets/css/commonstyle.css
+++ b/src/main/resources/static/assets/css/commonstyle.css
@@ -5,6 +5,16 @@ body, * {
     font-family: 'Noto Sans KR', sans-serif !important;
 }
 
+.container {
+    padding-left: 280px;
+}
+/* side bar */
+.nav-item {
+    padding: 0 40px !important;
+    text-align: left !important;
+}
+/* side bar */
+
 .nav-link {
     font-family: 'Noto Sans KR', sans-serif;
     font-size: 17px;
