--- a/src/main/resources/static/assets/css/mypagestyle.css
+++ b/src/main/resources/static/assets/css/mypagestyle.css
@@ -1,10 +1,10 @@
-body {
-    font-family: "Open Sans", Arial, sans-serif;
-    min-height: 100vh;
-    background-color: #fafafa;
-    color: #262626;
-    padding-bottom: 3rem;
-}
+/*body {*/
+/*    font-family: "Open Sans", Arial, sans-serif;*/
+/*    min-height: 100vh;*/
+/*    background-color: #fafafa;*/
+/*    color: #262626;*/
+/*    padding-bottom: 3rem;*/
+/*}*/
 
 img {
     display: block;
@@ -13,7 +13,7 @@ img {
 .container {
     max-width: 93.5rem;
     margin: 0 auto;
-    padding: 0 2rem;
+    padding: 0rem 2rem 0rem calc(2rem + 280px);
 }
 
 .btn {
@@ -36,11 +36,6 @@ img {
     width: 1px;
     overflow: hidden;
     clip: rect(1px, 1px, 1px, 1px);
-}
-
-.nav-item {
-    padding: 0 40px !important;
-    text-align: left !important;
 }
 
 /* Profile Section */
