--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <th:block th:fragment="sidebarFragment">
-  <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px;">
+  <div class="position-fixed d-flex flex-column align-items-start flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px; height: 100vh">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
       <span class="fs-4 text-center">ThreeGo</span>
     </a>
@@ -49,7 +49,7 @@
       </li>
     </ul>
     <hr>
-    <div class="dropdown">
+    <div class="dropdown mt-auto">
       <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
         <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
         <strong>mdo</strong>
