--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -21,22 +21,23 @@
 
 </head>
 <body>
+
+
+
 <script>
     $(document).ready(function (){
         let prevUrl = document.referrer;
         $('input[name=prevUrl]').val(prevUrl);
     })
 
-    // function validateForm(form){
-    //     if(!form.id.value){
-    //         alert("아이디 입력 하세요");
-    //         return false;
-    //     }
-    //     if(!form.pw.value){
-    //         alert("패스워드 입력 하세요");
-    //         return false;
-    //     }
-    // }
+    // 아이디 찾기
+    $(function (){
+
+        $("#findId_btn").click(function (){
+            console.log("findidbtn")
+            location.href='findId';
+        })
+    })
 </script>
 <style>
     #find-info{
@@ -60,13 +61,21 @@
 </style>
 
 <!-- header-->
-<th:block th:replace="~{fragments/header}"></th:block>
-<div class="sub-header">
-    <div class="container pt-5 pl-5">
-        <h3 class="display-6 text-white">로그인</h3>
-    </div>
-</div>
+<!--<th:block th:replace="~{fragments/header}"></th:block>-->
 
+<!--사이드바-->
+<div class="d-flex flex-nowrap">
+    <th:block th:replace="~{fragments/sidebar}"></th:block>
+
+    <div class="w3-content w3-container w3-margin-top container position-relative pb-5">
+
+        <!--허전해서 이미지-->
+        <div class="w3-content w3-container container position-relative pb-5 headerImg"
+             style="background-image: url('/assets/img/mainimg/daejeon2.jpg');
+         background-size: cover;
+         height: 15em;
+         margin-bottom: 3em;">
+        </div>
 
 
 <form action="/loginProcess" method="POST" name="loginFrm" onsubmit="return validateForm(this)">
@@ -74,12 +83,12 @@
     <div th:if="${param.error}">
         <div class="alert alert-danger">
             사용자ID 또는 비밀번호를 확인해 주세요.
-            <!-- 로그인 실패 시 handleLoginFailure 함수 호출 -->
-<!--            <script>handleLoginFailure();</script>-->
+
         </div>
     </div>
-    <div class="container position-relative pt-5 pb-5">
-        <h1 class="text-center">로그인</h1>
+    <div class="w3-content w3-container w3-margin-top container-fluid position-relative pb-5">
+
+    <h1 class="text-center">로그인</h1>
         <div id="header">
             <p class="text-center">로그인에 필요한 정보를 기입해주세요.</p>
         </div>
@@ -101,8 +110,8 @@
             <input type="submit" value="로그인" class="btn btn-primary btn-md"><br/>
         </div>
         <div id="find-info" class="text-center">
-            <a href="/findId.do">아이디 찾기</a>
-            <a href="/findPw.do">비밀번호 찾기</a>
+            <span id="findId_btn"><a href="/findId">아이디 찾기</a></span>
+            <a href="/findPw">비밀번호 찾기</a>
         </div>
     </div>
 </form>
@@ -112,5 +121,8 @@
 <th:block th:replace="~{fragments/footer}"></th:block>
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    </div>
+</div>
 </body>
 </html>
