플랜 일정 추가 클릭이벤트 수정

--- a/src/main/resources/static/assets/css/mypagestyle.css
+++ b/src/main/resources/static/assets/css/mypagestyle.css
@@ -1,10 +1,10 @@
-/*body {*/
-/*    font-family: "Open Sans", Arial, sans-serif;*/
-/*    min-height: 100vh;*/
-/*    background-color: #fafafa;*/
-/*    color: #262626;*/
-/*    padding-bottom: 3rem;*/
-/*}*/
+body {
+    /*font-family: "Open Sans", Arial, sans-serif;*/
+    min-height: 100vh;
+    /*background-color: #fafafa;*/
+    /*color: #262626;*/
+    padding-bottom: 3rem;
+}
 
 img {
     display: block;
