--- a/src/main/resources/templates/plan/plan2.html
+++ b/src/main/resources/templates/plan/plan2.html
@@ -71,7 +71,8 @@
     function showTourItems(){
         $(document).on('click','.page-item',function (e) {
             const target = e.target;
-            sessionStorage.setItem("cityPageNum", target.getAttribute('data-num'));
+            console.log(target.getAttribute('data-num'))
+            // sessionStorage.setItem("cityPageNum", target.getAttribute('data-num'));
             if(!target.classList.contains('disabled')){
                 $.ajax({
                     url : '/plan/api/touritems',
@@ -941,27 +942,19 @@
                                 <nav aria-label="page-bar">
                                     <ul class="pagination">
                                         <li class="page-item">
-                                    <span class="page-link" data-num="0">
-                                        <i class="bi bi-chevron-double-left"></i>
-                                    </span>
+                                            <i class="bi bi-chevron-double-left page-link" data-num="0"></i>
                                         </li>
                                         <li class="page-item" th:classappend="${pageResponse.prev} ? '' : 'disabled'">
-                                    <span class="page-link" th:attr="data-num=${pageResponse.start -1}">
-                                        <i class="bi bi-chevron-left"></i>
-                                    </span>
+                                            <i class="bi bi-chevron-left page-link" th:attr="data-num=${pageResponse.start -1}"></i>
                                         </li>
                                         <th:block th:each="pageNo : ${#numbers.sequence(pageResponse.start, pageResponse.end)}">
                                             <li class="page-item"><span class="page-link" th:attr="data-num=${pageNo}" th:classappend="${pageResponse.page == pageNo} ? 'active' : ''" th:text="${pageNo + 1}"></span></li>
                                         </th:block>
                                         <li class="page-item" th:classappend="${pageResponse.next} ? '' : 'disabled'">
-                                    <span class="page-link" th:attr="data-num=${pageResponse.end +1}">
-                                        <i class="bi bi-chevron-right"></i>
-                                    </span>
+                                            <i class="bi bi-chevron-right page-link" th:attr="data-num=${pageResponse.end +1}"></i>
                                         </li>
                                         <li class="page-item">
-                                    <span class="page-link" th:attr="data-num=${pageResponse.last}">
-                                        <i class="bi bi-chevron-double-right"></i>
-                                    </span>
+                                            <i class="bi bi-chevron-double-right page-link" th:attr="data-num=${pageResponse.last}"></i>
                                         </li>
                                     </ul>
                                 </nav>
