--- a/src/main/resources/templates/plan/showplan.html
+++ b/src/main/resources/templates/plan/showplan.html
@@ -353,10 +353,11 @@
         </div>
 
         <div class="container-fluid">
-            <th:block th:each="touritem : ${pageResponse.dtoList}">
-                <p th:text="${touritem.contentid}"></p>
-                <p th:text="${touritem.title}"></p>
-                <p th:text="${touritem.address}"></p>
+            <th:block th:each="plan : ${plans}">
+                <p th:text="${plan.tourItem.contentid}"></p>
+                <p th:text="${plan.tourItem.title}"></p>
+                <p th:text="${plan.tourItem.addr1}"></p>
+                <p th:text="${plan.tourItem.addr1}"></p>
             </th:block>
         </div>
 
