--- a/src/main/resources/templates/plan/plan2.html
+++ b/src/main/resources/templates/plan/plan2.html
@@ -627,7 +627,7 @@
                             });
                         })), // 전송할 데이터
                         success: function(response) { // 요청이 성공적으로 완료되었을 때 실행될 함수
-
+                            console.log('성공');
                         },
                         error: function(xhr, status, error) { // 요청이 실패했을 때 실행될 함수
                             alert('실패');
