--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <!-- Font Awesome icons (free version)-->
@@ -128,10 +128,83 @@
         }
 
 
-    /*  리뷰작성 관련  */
+        /*  리뷰작성 관련  */
         #new-post-btn {
             bottom: 5%;
             right: 5%;
+        }
+
+        .container-fluid {
+            height: 100%;
+        }
+
+        .container-fluid .row {
+            height: 100%;
+        }
+
+        .preview-container {
+            position: relative;
+            padding: 0 !important;
+            height: 100%;
+        }
+
+        .delete-img-btn {
+            position: absolute;
+            top: 5%;
+            right: 5%;
+        }
+        .add-file {
+            position: absolute;
+            bottom: 5%;
+            right: 5%;
+            z-index: 100;
+        }
+        #img-uploader {
+            display: none;
+        }
+        .uploader {
+            padding: 10px;
+            color: #136DF8;
+            cursor: pointer;
+        }
+        .uploader:hover {
+            background-color: #136DF8;
+            color: #FFFFFF;
+            transition: all 0.2s;
+        }
+        .select-hint{
+            display: none;
+        }
+        #review-contents {
+            height: 380px;
+            resize: none;
+        }
+
+        /* swiper */
+        .swiper {
+            width: 100%;
+            height: 750px;
+            overflow: hidden;
+        }
+
+        .swiper-slide {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            font-size: 18px;
+            color: #999999;
+            background: #333333;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .swiper-slide img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
     </style>
 
@@ -234,24 +307,108 @@
             </div>
         </div>
     </div>
-    <div id="editor" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="true" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-xl modal-dialog-scrollable">
+    <div id="select-book" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="selectBookLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <h1 class="modal-title fs-5" id="selectBookLabel">리뷰북 선택</h1>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="selectReviewBook" id="selectReviewBook1">
+                        <label class="form-check-label" for="selectReviewBook1">
+                            새 리뷰북 생성
+                            <select class="form-select form-select-sm" aria-label="Default select example">
+                                <option selected>리뷰북에 기록할 여행정보를 선택하세요.</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                                <input class="form-control form-control-sm" type="text" placeholder="제목을 입력해주세요." aria-label=".form-control-sm example">
+                            </select>
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="selectReviewBook" id="selectReviewBook2" >
+                        <label class="form-check-label" for="selectReviewBook2">
+                            기존 리뷰북에 추가
+                            <select class="form-select form-select-sm" aria-label="Default select example">
+                                <option selected>Open this select menu</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="selectReviewBook" id="selectReviewBook3">
+                        <label class="form-check-label" for="selectReviewBook3">
+                            리뷰북을 선택하지 않고 리뷰 작성
+                        </label>
+                    </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Understood</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editor" onclick="goEdit()">다음</button>
                 </div>
             </div>
         </div>
     </div>
-    <button type="button" id="new-post-btn" class="position-fixed rounded-pill btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#editor">
+    <div id="editor" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="editorLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-xl">
+            <div class="modal-content">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="preview-container col-md-7">
+                            <div class="add-file">
+                                <label for="img-uploader" class="uploader border border-primary rounded-pill">사진 추가</label>
+                                <input type="file" id="img-uploader" accept="image/*" onchange="setPreview()" multiple/>
+                            </div>
+                            <div class="swiper mySwiper">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">사진을 추가해주세요.</div>
+                                </div>
+                                <div class="swiper-controller">
+                                    <div class="swiper-button-next"></div>
+                                    <div class="swiper-button-prev"></div>
+                                    <div class="swiper-pagination"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-5 d-flex align-items-center">
+                            <div class="modal-body">
+                                <div class="mb-2">
+                                    <label for="selected-review-book" class="form-label">리뷰북</label>
+                                    <input type="text" class="form-control form-control-sm" id="selected-review-book" readonly>
+                                </div>
+                                <div class="mb-2">
+                                    <label for="select-touritem-info" class="form-label">관광지 정보 불러오기</label>
+                                    <select class="form-select form-select-sm" id="select-touritem-info" onchange="selectTouritem()">
+                                        <option class="select-hint" disabled selected>관광지 정보를 선택해주세요.</option>
+                                        <option value="direct">직접 입력</option>
+                                        <option value="contentid1">집가기</option>
+                                        <option value="contentid2">밥먹기</option>
+                                    </select>
+                                </div>
+                                <div class="mb-2">
+                                    <label for="selected-touritem-name" class="form-label">관광지 이름 작성</label>
+                                    <input type="text" class="form-control form-control-sm" id="selected-touritem-name" disabled>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="review-contents" class="form-label">본문</label>
+                                    <textarea class="form-control form-control-sm" id="review-contents"></textarea>
+                                </div>
+                                <div class="editor-btn-group d-flex justify-content-end gap-2">
+                                    <button type="button" class="btn btn-sm btn-secondary" data-bs-toggle="modal" data-bs-target="#select-book">이전</button>
+                                    <button type="button" class="btn btn-sm btn-primary" data-bs-dismiss="modal">완료</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <button type="button" id="new-post-btn" class="position-fixed rounded-pill btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#select-book">
         <i class="bi bi-compass"></i>
     </button>
 </div>
@@ -260,20 +417,132 @@
 
     <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
 <!--카드 -->
 <script>
     // 버튼 누르면 더보기
     $(document).ready(function() {
-        $("#morebtn").click(function() {
-            $(".invisiblecard").slideToggle(500);
-            if ($("#morebtn").html() == "더보기") {
-                $("#morebtn").html("접기");
-            } else {
-                $("#morebtn").html("더보기");
-            }
-        });
+        // $("#morebtn").click(function() {
+        //     $(".invisiblecard").slideToggle(500);
+        //     if ($("#morebtn").html() == "더보기") {
+        //         $("#morebtn").html("접기");
+        //     } else {
+        //         $("#morebtn").html("더보기");
+        //     }
+        // });
+        //
+        $('.swiper-controller').hide();
+        deleteImg();
     });
+
+    // swiper 설정
+    var swiper = new Swiper(".mySwiper", {
+        observer: true,
+        observeParents: true,
+        navigation: {
+            nextEl: ".swiper-button-next",
+            prevEl: ".swiper-button-prev",
+        },
+        pagination: {
+            el: ".swiper-pagination",
+        },
+        mousewheel: true,
+        keyboard: true,
+    });
+
+    let selectedReviewBook;
+    const fileInput = document.getElementById('img-uploader');
+    const images = [];
+
+    function goEdit(){
+        selectedReviewBook = "test";
+        $('#selected-review-book').val(selectedReviewBook);
+    }
+
+    function selectTouritem(){
+        let item = $('#select-touritem-info option:selected');
+        let title = item.text();
+        let contentId = item.val();
+        console.log(title);
+        console.log(contentId);
+        let titleInput = $('#selected-touritem-name');
+        titleInput.attr('disabled',false);
+        titleInput.val(title)
+    }
+
+    function setPreview(){
+        let files = fileInput.files;
+        if(files.length + images.length > 4){
+            files.length = 0;
+            alert("사진은 4장까지 첨부할 수 있습니다.")
+        }else {
+            if(files.length > 0 && images.length === 0) {
+                $('.swiper-wrapper').html("");
+            }
+            if(files.length > 0){
+                for (let file of files) {
+                    images.push(file);
+
+                    let reader = new FileReader();
+
+                    reader.onload = function(data) {
+                        const tempHtml = `<div class="swiper-slide">` +
+                            `<button class="delete-img-btn btn btn-dark rounded-pill opacity-50">` +
+                            `<i class="bi bi-x-lg"></i>` +
+                            `</button>` +
+                            `<img class="preview-img" src="${data.target.result}" style="object-fit: contain" onload="goLastSlide()"/>` +
+                            `</div>`;
+                        swiper.appendSlide(tempHtml);
+                        swiper.update();
+                    };
+
+                    reader.readAsDataURL(file);
+                }
+            }
+            if(images.length > 1){
+                $('.swiper-controller').show()
+            }else {
+                $('.swiper-controller').hide()
+            }
+            if(images.length >= 4){
+                $('.uploader').hide()
+            }
+        }
+    }
+
+    function goLastSlide() {
+        swiper.slideTo(images.length-1,300,false);
+    }
+
+    function deleteImg() {
+        $(document).on('click','.delete-img-btn',function () {
+            let idx = $(".delete-img-btn").index(this);
+            //let imgSlide = $(this).parent();
+            //imgSlide.remove();
+            swiper.slideTo(idx-1,300,false);
+            swiper.removeSlide(idx);
+            swiper.update();
+            images.splice(idx,1);
+
+            if(images.length > 1){
+                $('.swiper-controller').show()
+            }else {
+                $('.swiper-controller').hide()
+            };
+
+            if(images.length === 0){
+                const tempHtml = `<div class="swiper-slide">` +
+                    `사진을 추가해주세요.` +
+                    `</div>`;
+                swiper.appendSlide(tempHtml);
+                swiper.update();
+            }
+            if($('.uploader').css('display') === 'none' && images.length < 4){
+                $('.uploader').show()
+            }
+        })
+    }
 </script>
 </body>
 </html>
