--- a/src/main/resources/templates/index_copy.html
+++ b/src/main/resources/templates/index_copy.html
@@ -1,3 +1,4 @@
+<!--혹시나 또 쓸 일이 있을까 싶어 복사해둠-->
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -23,42 +24,41 @@
 </head>
 <body>
 <!-- header-->
-<div class="d-flex flex-nowrap">
-    <th:block th:replace="~{fragments/sidebar}"></th:block>
+<th:block th:replace="fragments/searchheader"></th:block>
 
 
-<!--&lt;!&ndash; Icons Grid&ndash;&gt;-->
-<!--<section class="features-icons bg-light text-center">-->
-<!--    <div class="container">-->
-<!--        <div class="row">-->
+<!-- Icons Grid-->
+<section class="features-icons bg-light text-center">
+    <div class="container">
+        <div class="row">
 
-<!--            <h2 class="mb-5">당신의 여행을 시작하세요!</h2>-->
-<!--            <div class="col-lg-4">-->
+            <h2 class="mb-5">당신의 여행을 시작하세요!</h2>
+            <div class="col-lg-4">
 
-<!--                <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">-->
-<!--                    <div class="features-icons-icon d-flex"><i class="bi-pin-map-fill m-auto text-primary"></i></div>-->
-<!--                    <h5>국내의 도시를 찾아보고,<br>관광 정보를 확인해보세요.</h5>-->
-<!--                    <p class="mb-0"></p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="col-lg-4">-->
-<!--                <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">-->
-<!--                    <div class="features-icons-icon d-flex"><i class="bi-calendar-week m-auto text-primary"></i></div>-->
-<!--                    <h5>다른 여행자들의 일정을 확인하고,<br>나만의 일정을 계획해보세요.</h5>-->
-<!--                    <p class="mb-0">coming soon... </p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="col-lg-4">-->
-<!--                <div class="features-icons-item mx-auto mb-0 mb-lg-3">-->
-<!--                    <div class="features-icons-icon d-flex"><i class="bi-luggage-fill m-auto text-primary"></i></div>-->
-<!--                    <h5>여행자들과 여행정보를<br>공유하고, 질문해보세요.</h5>-->
-<!--                    <p class="mb-0"></p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    </div>-->
-<!--</section>-->
+                <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                    <div class="features-icons-icon d-flex"><i class="bi-pin-map-fill m-auto text-primary"></i></div>
+                    <h5>국내의 도시를 찾아보고,<br>관광 정보를 확인해보세요.</h5>
+                    <p class="mb-0"></p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
+                    <div class="features-icons-icon d-flex"><i class="bi-calendar-week m-auto text-primary"></i></div>
+                    <h5>다른 여행자들의 일정을 확인하고,<br>나만의 일정을 계획해보세요.</h5>
+                    <p class="mb-0">coming soon... </p>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+                    <div class="features-icons-icon d-flex"><i class="bi-luggage-fill m-auto text-primary"></i></div>
+                    <h5>여행자들과 여행정보를<br>공유하고, 질문해보세요.</h5>
+                    <p class="mb-0"></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+</section>
 
 
 <!-- Image Cards-->
@@ -272,15 +272,12 @@
     </div>
 </section>
 
+<!--footer-->
+<th:block th:replace="~{fragments/footer}"></th:block>
 
 
 <!-- Bootstrap core JS-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
-
-</div>
-<!--footer-->
-<th:block th:replace="~{fragments/footer}"></th:block>
 
 <!--카드 -->
 <script>
