--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -188,7 +188,7 @@
                 alert(response); // "가입을 환영합니다: 사용자ID"가 표시됩니다.
 
                 // 페이지 이동
-                window.location.href = '/index'; // 원하는 페이지 URL로 수정하세요.
+                window.location.href = '/review'; // 원하는 페이지 URL로 수정하세요.
             },
             error: function(error) {
                 // Ajax 요청 실패 시 처리
