프로필... 수정 ㅠㅠ

--- a/src/main/resources/templates/editProfile.html
+++ b/src/main/resources/templates/editProfile.html
@@ -41,12 +41,15 @@
         height: 100px;
         border-radius: 50%;
         margin-right: 20px;
-
     }
-
 
     .editprofilediv{
         padding-left: 12px;
+
+    .form-group{
+        width: auto;
+    }
+
     }
 </style>
 <body>
@@ -63,8 +66,8 @@
          margin-bottom: 3em;">
         </div>
 
-        <div class = "editprofilediv">
-        <div class="container">
+        <div>
+        <div class="container editprofilediv">
             <div class="profile-info">
                 <img src="/assets/img/mainimg/daejeon2.jpg" alt="프로필 이미지">
                 <div>
